...
                          backgroundColor: AppColors.rosa,
                          shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(22),
                          ),
                        ),
                        child: const Text(
                          'INGRESAR',
                          style: TextStyle(
                            color: AppColors.texto,
                            fontWeight: FontWeight.bold,
                            fontSize: 17,
                          ),
                        ),
...
