...
  }

  Widget columnaUno() {
    return Column(
      children: [
        tarjetaFormulario(
          titulo: 'Buscar libro',
          child: Autocomplete<String>(
            optionsBuilder: (TextEditingValue value) {
              final libros = [
                'El Principito',
                'Orgullo y Prejuicio',
                'Harry Potter',
...
